# tinychat

./: .gitignore  Makefile  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  libtool
talk/: Makefile  Makefile.in
talk/base/: Makefile  Makefile.in  logging.cc  stream.cc  unixfilesystem.cc
talk/examples/: Makefile  Makefile.am  Makefile.in  acp
talk/examples/call/: Makefile  Makefile.am  Makefile.in
talk/examples/chat/: Makefile  Makefile.am  Makefile.in  chat_main.cc  chatclient.cc  chatclient.h  textprocesstask.cc  textprocesstask.h
talk/examples/login/: Makefile  Makefile.in
talk/examples/pcp/: Makefile  Makefile.in
talk/p2p/: Makefile  Makefile.in
talk/p2p/base/: Makefile  Makefile.in
talk/p2p/client/: Makefile  Makefile.in
talk/session/: Makefile  Makefile.in
talk/session/fileshare/: Makefile  Makefile.in
talk/session/phone/: Makefile  Makefile.in  linphonemediaengine.cc
talk/session/tunnel/: Makefile  Makefile.in
talk/xmllite/: Makefile  Makefile.in
talk/xmpp/: Makefile  Makefile.in  xmpptask.cc  xmpptask.h
